integration_tests/codegen_fail/fail/object/impl_fields_unique.stderr
warning: field is never read: `enum_path`
   --> $DIR/mod.rs:282:5
    |
282 |     pub enum_path: Option<TokenStream>,
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: field is never read: `span`
   --> $DIR/mod.rs:296:5
    |
296 |     pub span: Span,
    |     ^^^^^^^^^^^^^^

warning: 2 warnings emitted

error: GraphQL object does not allow fields with the same name
  --> $DIR/impl_fields_unique.rs:9:5
   |
9  | /     fn test(&self) -> String {
10 | |         String::new()
11 | |     }
   | |_____^
   |
   = help: There is at least one other field with the same name `test`, possibly renamed via the #[graphql] attribute
   = note: https://spec.graphql.org/June2018/#sec-Objects
